unpackaged/main/default/objects/DoubleClickRefreshToken__c/DoubleClickRefreshToken__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DoubleClickRefreshToken</label>
</CustomObject>