unpackaged/main/default/objects/DoubleClickRefreshToken__c/fields/ExpiresIn__c.field-meta.xml
<CustomField>
    <fullName>ExpiresIn__c</fullName>
    <label>ExpiresIn</label>
    <type>DateTime</type>
</CustomField>